intro part complete without icon sheting

--- a/index.html
+++ b/index.html
@@ -27,5 +27,23 @@
         </div>
     </header>    
     <!--Complete the header part-->
+    <div class="intro">
+        <div class="introlng">
+            <div class="uintro">
+                <div class="part1">Explore Your Travel</div>
+                <div class="part2">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</div>
+                <div class="part3">
+                    <div class="part31"><input type="text" placeholder="Your Name"> </div>
+                    <div class="part32"><input type="text" placeholder="When"> <select ><option></option></select> </div>
+                    <div class="part33"><input type="text" placeholder="Select type"> <select ><option></option></select> </div>
+                    <button>Find now</button> 
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--information part start-->
+    <div class="info">
+        
+    </div>
 </body>
 </html>
