Extension part complete withoout media query

--- a/index.html
+++ b/index.html
@@ -71,5 +71,10 @@
         </div>
     </div>
     <!--information section end-->
+    <div class="exten">
+        <h3> Choose Your Destination</h3>
+        <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+    </div>
+    <!--Extension part complete-->
 </body>
 </html>
