The images have been set correctly

--- a/index.html
+++ b/index.html
@@ -76,5 +76,21 @@
         <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
     </div>
     <!--Extension part complete-->
+    <div class="place">
+        <div class="place1">
+            <div class="place11"><div class="place111">Maldives</div></div>
+            <div class="place12"><div class="place121">Indonesia</div></div>
+        </div>
+        <div class="place2">
+            <div class="place21"><div class="place211">
+                Srilanka</div></div>
+            <div class="place22"><div class="place221">North America</div></div>
+            <div class="place23"><div class="place231">Kashmir</div></div>
+        </div>
+        <div class="place3">
+            <div class="place31"><div class="place311">Bangladesh</div></div>
+            <div class="place32"><div class="place321">Bandarban</div></div>
+        </div>
+    </div>
 </body>
 </html>
