--- a/index.html
+++ b/index.html
@@ -92,5 +92,12 @@
             <div class="place32"><div class="place321">Bandarban</div></div>
         </div>
     </div>
+    <!--Completely given the every image-->
+    <div class="exten2">
+        <div class="exten21">Why Choose Us</div>
+        <div class="exten22">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</div>
+    </div>
+    <!--start the explore section-->
+    
 </body>
 </html>
