--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Blog for tourist</title>
     <link rel="stylesheet" href="index.css" >
 </head>
@@ -121,6 +124,19 @@
                 </div>
         </div>   
     </div>
-    
+    <!--Explore part end-->
+    <footer>
+        <div class="ftpr"></div>
+        <div class="footer1"><span>Hero</span> Travel</div>
+        <div class="footer2">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </div>
+        <div class="footer3">
+            <img src="Images/Facebook.png" alt="">
+            <img src="Images/Linkedin.png" alt="">
+            <img src="Images/Twitter.png" alt="">
+            <img src="Images/Instagram.png" alt="">
+        </div>
+        <hr>
+        <div class="footer4">2017, All Rights Reserved.</div>
+    </footer>
 </body>
 </html>
