Subscribe section complete with of 70% off sell

--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
         </div>   
     </div>
     <!--Explore part end-->
+    <!--Start the Subscrite section-->
+    <div class="sub">
+        <div class="sub1">
+            <div class="sub11">Newsletter</div>
+            <div class="sub12">Get your daily dose of travel news & tips. Sign up today!</div>
+            <hr class="hr" >
+            <input type="text" class="sub13" placeholder="Enter Your Name">
+            <input type="text" class="sub14" placeholder="Enter Your Email">
+            <button class="subbt" >Subscribe</button>
+        </div>
+        <div class="sub2"></div>
+    </div>
+    <!--Subscribe  section end-->
+    <!--Start the footer sectiion-->
     <footer>
         <div class="ftpr"></div>
         <div class="footer1"><span>Hero</span> Travel</div>
