End of body part

--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
             <input type="text" class="sub14" placeholder="Enter Your Email">
             <button class="subbt" >Subscribe</button>
         </div>
-        <div class="sub2"></div>
+        <div class="sub2">
+            <div class="sub21">
+                <h4>Travel.com</h4>
+                <div class="sub211">Save up to 70%</div>
+            </div>
+        </div>
     </div>
     <!--Subscribe  section end-->
     <!--Start the footer sectiion-->
